# distancefyi

./: README.md  SKILL.md  demo.tape  pyproject.toml
skills/distance-tools/: SKILL.md
src/distancefyi/: __init__.py  api.py  cli.py  engine.py  mcp_server.py
tests/: test_api.py  test_cli.py  test_engine.py  test_mcp.py
