[project]
name = "distancefyi"
version = "0.1.1"
description = "Pure Python distance engine — Haversine great-circle distance, bearing, midpoint, travel time estimates, and unit conversions. Zero dependencies."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "FYIPedia" }]
keywords = [
    "distance",
    "haversine",
    "great-circle",
    "bearing",
    "midpoint",
    "geodesic",
    "coordinates",
    "latitude",
    "longitude",
    "travel-time",
    "flight-time",
    "geography",
    "gis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Environment :: Console",
]
dependencies = []

[project.optional-dependencies]
api = ["httpx>=0.27"]
cli = ["typer>=0.15", "rich>=13.0"]
mcp = ["mcp>=1.0"]
all = ["distancefyi[api,cli,mcp]"]

[project.scripts]
distancefyi = "distancefyi.cli:app"

[project.entry-points."mcp.servers"]
distancefyi = "distancefyi.mcp_server:mcp"

[project.urls]
Homepage = "https://distancefyi.com"
"Distance Calculator" = "https://distancefyi.com/tools/distance-calculator/"
Documentation = "https://distancefyi.com/developers/"
Repository = "https://github.com/fyipedia/distancefyi"
Issues = "https://github.com/fyipedia/distancefyi/issues"
Changelog = "https://github.com/fyipedia/distancefyi/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/distancefyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF022"]  # __all__ grouped by category

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mcp>=1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "rich>=13.0",
    "ruff>=0.15.4",
    "typer>=0.15",
]
